--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^10.16.4",
     "jest-fetch-mock": "^3.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
